# retirement

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
src/: error.rs  lib.rs  main.rs
src/config/: cli.rs  mod.rs  settings.rs
src/engine/: mod.rs  runner.rs
src/execution/: mod.rs  simulated.rs
src/portfolio/: fees.rs  in_memory.rs  mod.rs
src/sources/: mod.rs
src/sources/binance/: mod.rs  types.rs  ws.rs
src/sources/polymarket/: mod.rs  rest.rs  types.rs  ws.rs
src/strategy/: arb_logger.rs  mod.rs  registry.rs  spread_logger.rs
src/types/: market.rs  mod.rs  order.rs  orderbook.rs  tick.rs
